--- a/SuperCollider/Help/SwingOSC/swing.css
+++ b/SuperCollider/Help/SwingOSC/swing.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
-	font-size: 9pt
+/*	font-size: 9pt */
 }	
 span.kw {color: #0000bf}
 span.cl {color: #0000bf}
@@ -9,11 +9,11 @@ span.st {color: #606060}
 span.sy {color: #007300}
 span.op {font-style: italic; font-size: 110%}
 span.wiki {text-decoration: underline}
-div.osc {font-size:90%; color: #564d85}
+div.osc { font-size:10pt; color: #564d85}
 span.osc {color: #564d85}
 pre, code {
 	font-family: Monaco, Courier, monospace;
-	font-size: 7.5pt
+/*	font-size: 7.5pt */
 }
 code {color: #300060}
 var {
